[CDAP-12479, 12608] Minor DataPrep/Connections bugfixe - Don't reset list of databases when changing details of connection, and adds missing i18n - Fixes top panel alignment issues in both dataprep and wrangler, changes btn-info color to be consistent, and rearranges relevant i18n

--- a/cdap-ui/app/cdap/components/DataPrep/TopPanel/TopPanel.scss
+++ b/cdap-ui/app/cdap/components/DataPrep/TopPanel/TopPanel.scss
@@ -60,10 +60,6 @@ $dropdown_item_font_color: black;
         padding: 0 10px;
         width: 100%;
 
-        &.upgrade {
-          width: calc(100% - 100px);
-        }
-
         .title {
           overflow: hidden;
           text-overflow: ellipsis;
@@ -249,7 +245,6 @@ $dropdown_item_font_color: black;
     }
 
     .action-buttons {
-      margin-top: 10px;
       width: 100%;
       display: inline-flex;
 
